teleportation on a case and inside a building is ok

--- a/aframe/index.html
+++ b/aframe/index.html
@@ -325,12 +325,12 @@
                       hand-controls="left"
                       rotation="-90 0 0"
                       raycaster="objects: .building, .floor-tile"
-                      super-hands laser-controls cursor></a-entity>
+                      super-hands laser-controls cursor upEvents="gripup" downEvents="gripdown"></a-entity>
             <a-entity id="right"
                       hand-controls="right"
                       rotation="90 0 0"
                       raycaster="objects: .building, .floor-tile"
-                      super-hands laser-controls cursor></a-entity>
+                      super-hands laser-controls cursor upEvents="gripup" downEvents="gripdown"></a-entity>
         </a-entity>
     </a-scene>
 </body>
