add new test page

--- a/test/index.html
+++ b/test/index.html
@@ -450,7 +450,7 @@
         </a-entity>
       </a-entity>
 
-      <a-link href="/boutique-vr/aframe/inBuilding.html"
+      <a-link href="/aframe/inBuilding.html"
               title="In Building"
               image="#inBuilding"
               position="6 1.6 -4"></a-link>
