--- a/test/index.html
+++ b/test/index.html
@@ -440,41 +440,89 @@
       });
 
       AFRAME.registerComponent('raycaster-listen', {
-        oldPoint: null,
-
         init: function () {
-          // Use events to figure out what raycaster is listening so we don't have to
-          // hardcode the raycaster.
-          let el = this.el;
           this.el.addEventListener('raycaster-intersected', evt => {
             this.raycaster = evt.detail.el;
-          });
-          this.el.addEventListener('raycaster-intersected-cleared', evt => {
-            this.raycaster = null;
-          });
-        },
-
-        tick: function () {
-          if (!this.raycaster) { return; }  // Not intersecting.
-
-          let intersection = this.raycaster.components.raycaster.getIntersection(this.el);
-          if (!intersection) { return; }
-          if(this.oldPoint === null || (this.oldPoint.x !== intersection.point.x || this.oldPoint.y !== intersection.point.y || this.oldPoint.z !== intersection.point.z)) {
-            this.oldPoint = intersection.point;
-            console.log(intersection.object.el);
-            let camera = document.querySelector('[camera]');
-            let position = camera.parentElement.getAttribute('position');
-            if(position !== undefined) {
-              camera.parentElement.setAttribute('position', {
-                x: intersection.point.x,
-                y: position.y,
-                z: intersection.point.z
+            this.target = evt.target;
+            let raycaster = this.raycaster.hasAttribute('camera') ? this.raycaster.parentElement : this.raycaster;
+            let cameraPosition = raycaster.getAttribute('position');
+            let objectPosition = this.target.getAttribute('position');
+            if(this.raycaster.hasAttribute('cursor')) {
+              this.raycaster.emit('cursorCollision', {
+                el: this.target,
+                elPosition: objectPosition,
+                target: this.raycaster,
+                targetPosition: this.raycaster.getAttribute('position'),
+                event: evt
+              });
+            } else if (this.raycaster.hasAttribute('camera')) {
+              this.raycaster.emit('cameraCollision', {
+                el: this.target,
+                elPosition: objectPosition,
+                target: this.raycaster,
+                targetPosition: cameraPosition,
+                event: evt
+              });
+            } else if (this.raycaster.hasAttribute('laser-controls')) {
+              this.raycaster.emit('laserCollision', {
+                el: this.target,
+                elPosition: objectPosition,
+                target: this.raycaster,
+                targetPosition: this.raycaster.getAttribute('position'),
+                event: evt
               });
             }
-            console.log(intersection.point);
-          }
+          });
         }
       });
+
+      AFRAME.registerComponent('cursor-collision-listener', {
+        init: function () {
+          this.el.addEventListener('cursorCollision', evt => {});
+        }
+      });
+
+      AFRAME.registerComponent('laser-collision-listener', {
+        init: function () {
+          this.el.addEventListener('laserCollision', evt => {});
+        }
+      });
+
+      AFRAME.registerComponent('camera-collision-listener', {
+        init: function () {
+          this.el.addEventListener('cameraCollision', evt => {
+            let cameraPosition = evt.detail.target.object3D.position;
+            let parentPosition = evt.detail.target.parentElement.object3D.position;
+            let objectPosition = evt.detail.elPosition;
+            let objectType = evt.detail.el.tagName.replace('A-', '').toLowerCase();
+            let objectWidth = evt.detail.el.getAttribute('width');
+            let objectDepth = evt.detail.el.getAttribute('depth');
+            let position = {
+              x: cameraPosition.x + parentPosition.x,
+              y: cameraPosition.y + parentPosition.y,
+              z: cameraPosition.z + parentPosition.z
+            };
+            // if(objectType === 'box') {
+              if((
+                      (objectPosition.x - (objectWidth / 2) === Math.round(position.x) - (objectWidth / 2))
+                      || (objectPosition.x + (objectWidth / 2) === Math.round(position.x) + (objectWidth / 2))
+                      || (objectPosition.x - (objectWidth / 2) + 1 === Math.round(position.x) + (objectWidth / 2))
+                      || (objectPosition.x - (objectWidth / 2) - 1 === Math.round(position.x) + (objectWidth / 2))
+                 ) && (
+                      (objectPosition.z - (objectDepth / 2) === Math.round(position.z) - (objectDepth / 2))
+                      || (objectPosition.z + (objectDepth / 2) === Math.round(position.z) + (objectDepth / 2))
+                      || (objectPosition.z - (objectDepth / 2) + 1 === Math.round(position.z) - (objectDepth / 2))
+                      || (objectPosition.z - (objectDepth / 2) - 1 === Math.round(position.z) - (objectDepth / 2))
+                 )) {
+                console.log('collided');
+              }
+            // } else {
+            //
+            // }
+          });
+        }
+      });
+
     </script>
   </head>
   <body>
@@ -485,9 +533,11 @@
         <img id="inBuilding" src="inBuilding.JPG">
       </a-assets>
 
-      <a-box class="collidable" color="#EF2D5E" height="2" position="0 1 -4" change-color-on-hover="color: blue" raycaster-listen></a-box>
-      <a-entity class="collidable" mixin="yoshi" position="2 0.5 -4" raycaster-listen></a-entity>
-      <a-box class="collidable" height="2" position="0 1 -4"
+      <a-box class="collidable" color="#EF2D5E" width="1" height="2" depth="1" position="0 1 -4" change-color-on-hover="color: blue" raycaster-listen></a-box>
+      <a-entity class="collidable" width="1" height="1.5" mixin="yoshi" depth="1" position="2 0 -4" raycaster-listen></a-entity>
+      <a-box class="collidable"
+             width="1" height="2" depth="1"
+             position="0 1 -4"
              animation="property: position; to: 4 1 -4; dur: 1500; easing: linear"
              animation__2="property: rotation; to: 0 360 0; loop: true; dur: 10000"
              animation__color="property: material.color"
@@ -496,31 +546,31 @@
 
       <a-entity light="color: white; intensity: 1.5" position="2 3 0"></a-entity>
 
-      <a-entity id="rig" position="2 1.6 0">
-        <a-entity id="camera" camera="active: true" look-controls wasd-controls raycaster="objects: .collidable">
-          <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
-        </a-entity>
-      </a-entity>
-
-      <a-entity id="leftHand" laser-controls="hand: left" raycaster="far: 100; objects: [link], [box]" link-controls="hand: left"></a-entity>
-      <a-entity id="rightHand" laser-controls="hand: right" raycaster="far: 100; objects: [link], [box]" link-controls="hand: right"></a-entity>
+      <a-plane width="20" height="20" position="0 0 0" rotation="-90 0 0" color="white"></a-plane>
 
       <!--<a-link class="collidable"
-              width="2"
-              height="2"
+              width="2" height="2"
               href="/aframe/inBuilding.html"
               title="In Building"
               image="#inBuilding"
               position="6 1.6 -4"></a-link>-->
 
-      <!--<a-entity oculus-touch-controls="hand: left"
+      <a-entity id="rig" position="2 1.6 0">
+        <a-entity id="camera" camera="active: true" look-controls wasd-controls raycaster="objects: .collidable" camera-collision-listener>
+          <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
+        </a-entity>
+      </a-entity>
+
+      <a-entity oculus-touch-controls="hand: left"
                 x-button-listener
                 grab-listener
+                trigger-listener
                 cursor="rayOrigin: laser"
                 laser-controls ></a-entity>
       <a-entity oculus-touch-controls="hand: right"
                 a-button-listener
                 grab-listener
+                trigger-listener
                 cursor="rayOrigin: laser"
                 laser-controls ></a-entity>
       <a-entity gearvr-controls="hand: left"
@@ -532,7 +582,7 @@
                 trigger-listener
                 cursor="rayOrigin: laser"
                 laser-controls
-                raycaster="objects: .links; far: 5"></a-entity>-->
+                raycaster="objects: .links; far: 5"></a-entity>
     </a-scene>
   </body>
 </html>
